fixed image order when viewing on mobile

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -14,6 +14,10 @@
     .rtl {
         direction: rtl;
     }
+
+    .ltr {
+        direction: ltr;
+    }
 }
 
 /* See Alpine.js: https://github.com/alpinejs/alpine#x-cloak */
